# TachyWooting

./: .gitignore  LICENSE  MANIFEST.in  PERMISSIONS.sh  PLUGIN_MANAGEMENT.md  README.md  check_threshold.py  development.md  documentation.md  example_plugin_management.py  pyproject.toml  raw_sdk.md  requirements.txt  setup.py  test2.py  test_none_duration.py  tracking.parquet
.github/workflows/: test-install.yml  update-wooting-sdk.yml  workflow.yml
docs/: api.rst  conf.py  console_scripts.rst  development.md  development.rst  documentation.md  documentation.rst  getting_started.rst  index.md  index.rst  installation.rst  logging.rst  plugin_management.md  plugin_management.rst  raw_sdk.md  raw_sdk.rst  readme.md  scripts.md  scripts.rst  tachypy.rst  usage.md  usage.rst
scripts/: update_wooting_sdk.py
tachywooting/: __init__.py  package_setup.py  visualize.py  wooting_interface_builder.py  wooting_utils.py
tachywooting/demos/: __init__.py  cli.py  mini_bw_experiment.py  visual_fixation_demo.py
tachywooting/feedback/: __init__.py  mapping.py  state.py  tachypy_widget.py
tachywooting/interface/: __init__.py  wooting_interface.c
tachywooting/libraries/: VERSION.json
tachywooting/libraries/darwin/arm64/: MIGRATION_GUIDE.md
tachywooting/libraries/darwin/arm64/release/: libwooting_analog_sdk.dylib
tachywooting/libraries/darwin/x86_64/: BUILD.md  VIRTUAL_KEYBOARD.md
tachywooting/libraries/darwin/x86_64/release/: libwooting_analog_sdk.dylib
tachywooting/libraries/linux/: INSTALL.md
tachywooting/libraries/windows/: BUILD.md  VIRTUAL_KEYBOARD.md
tachywooting/libraries/windows/includes/: plugin.h
tests/: test_get_response_key.py  test_none_duration.py  test_package_basics.py  test_pressure_feedback.py  test_threshold_metadata.py
wooting_interface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wooting_package/: .gitignore  __init__.py  cleanup_cli.py  cli.py  mini_bw_experiment.py  package_setup.py  post_install.py  test.py  text_extraction.py  visual_fixation_demo.py  visualize.py  wooting_interface_builder.py  wooting_utils.py
wooting_package/demos/: cli.py  mini_bw_experiment.py  visual_fixation_demo.py
wooting_package/feedback/: __init__.py  tachypy_widget.py  widgets.py
wooting_package/interface/: __init__.py  wooting_interface.c
wooting_package/libraries/: VERSION.json
wooting_package/libraries/darwin/: libwooting_analog_sdk.dylib  libwooting_analog_wrapper.dylib
wooting_package/libraries/darwin/arm64/: libwooting_analog_plugin.dylib
wooting_package/libraries/darwin/arm64/release/: libwooting_analog_sdk_dist.dylib
wooting_package/libraries/darwin/x86_64/: libwooting_analog_wrapper.dylib
wooting_package/libraries/darwin/x86_64/release/: libwooting_analog_sdk_dist.dylib
wooting_package/libraries/linux/: SDK_USAGE.md
wooting_package/libraries/windows/: INSTALL.md  MIGRATION_GUIDE.md  PLUGINS.md  SDK_USAGE.md
wooting_package/libraries/windows/debug/: wooting_analog_sdk_dist.dll.lib
wooting_package/libraries/windows/includes/: wooting-analog-sdk.h
wooting_package/libraries/windows/release/: wooting_analog_sdk.dll.lib
wooting_package/permissions/: PERMISSIONS_linux.sh  PERMISSIONS_mac.sh
