[build-system]
requires = ["setuptools>=77.0", "wheel", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tachywooting"
version = "0.1.0"
description = "Python interface for Wooting analog keyboards"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Mathias Salvas-Hébert"},
    {name = "Guillaume Lalonde-Beaudoin"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["wooting", "analog-keyboard", "keyboard", "cffi", "hdf5"]

dependencies = [
    "cffi>=1.15.0",
    "h5py>=3.8.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "rich>=10.0.0",
    "setuptools>=77.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
tachypy = [
    "tachypy==0.1.14",
]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
dev = [
    "black>=23.0.0",
    "build>=1.0.0",
    "myst-parser>=2.0.0",
    "pytest>=7.0.0",
    "roman>=4.0",
    "ruff>=0.4.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "twine>=5.0.0",
    "tachywooting[tachypy]",
]
all = [
    "tachywooting[tachypy,dev]",
]

[tool.setuptools.packages.find]
include = ["tachywooting*"]
namespaces = true

[tool.setuptools.package-data]
tachywooting = [
    "libraries/**/*",
    "permissions/**/*",
]

[project.scripts]
wooting-demo = "tachywooting.demos.cli:main"
wooting-build-interface = "tachywooting.package_setup:run_post_install"
wooting-delete-interface = "tachywooting.package_setup:main_delete_interface"
wooting-visual-fixation-demo = "tachywooting.demos.visual_fixation_demo:main"
wooting-mini-bw-experiment = "tachywooting.demos.mini_bw_experiment:main"
wooting-visualize = "tachywooting.visualize:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]
